# uquant

./: .clang-format  .gitignore  .gitmodules  README.md  a  a.sh  logfile  ru1805.20180330.tick.txt  zn1805.20180328.tick.txt
bak/postgresql/: Pmain.cpp  Psqlconn.cpp  Psqlconn.h
client_js/: backpressure.js  client.js  server.js
data_dolphindb/: conv.sh  devide.py  loadTextEx.dos  test.py  udata_dolphindb.py
etc/: git.config
etc/json/: see_brokers.json  see_trade_time.json  see_trade_time_00.json
etc/runenv/: readme.md
etc/runenv/tbl/: trade.json
etc/runenv/tdx_data/: OI2405_1F.txt
grpc.ok.0509/cpp/uquantapi/: uapi_client.cc  uapi_server.cc
grpc/cpp/helloworld/: .greeter_async_client2.cc.swp  greeter_client.cc  greeter_server.cc
grpc/cpp/uquantapi/: .uapi_client.cc.swo  rrr  uapi_client.cc  uapi_server.cc  (+4 more)
grpc/protos/: helloworld.proto  uquantapi.proto
html/: .fincharts.js.swp  fincharts.js  index.html  ping.html  stock.html  tq1.html  tq3.html
html.ok/: fincharts.js
html/test/: index.html  test.js
inc/: .Bars.bak.swp  .Bars.h.swp  .Base.h.swp  .Echo.h.swp  .ErrLog.h.swp  .FuList.h.swp  .HubBck.h.swp  .HubCtp.h.swp  .MdSpi.h.swp  ApiClient.h  Bars.h  Bars.h.kkk  Base.h  Base.h.static  Data.h  DataHubs.h  DataHubs.h.bak  Echo.h  ErrLog.h  File.h  FuList.h  Global.h  HubApi.h  HubBck.h  HubSim.h  Json.h  MdCtp.h  MdSpi.h  MkSim.h  Psqlpool.h  Roll.h  SigSlot.h  TdFuBo.h  TdRate.h  strategy.h  uBEE.h
indicator/: Indicator.cpp  Indicator.h
k6test/: readme.md  ws.js
mak/: readme.md
pycode/: get_stock_1f.py  jinshuyuan.py  stock.py  tonghuashun_fq.py
pycode/Ashare/: Ashare.py  Demo1.py
pycode/pytdx/: A_20230617.csv  pytdx_his_fenbi.py  pytdx_tick.py  tdx_01.py
pycode/udata/: get_stock_1f.py  get_stock_1f_2.py  loadTextEx.dos  stock_list.py  stock_list_bak.csv  udata_dolphindb.py  udata_modify.py
pycode/udata01/: tt.sh  udata_dolphindb.py  untar.sh
run/dat/: data_format.txt
rundos/: import.dos
rundos/dolphindb_py/: d.py  d1.py  d2.py
script/: MACD_KD.cpp  all.sh  build.txt  config.ini  config.ini.sim  config.ini.xxx  config.ini.zsqh  config.ini.zx  config.ini.zxqh  config.ini.zxqh.pro  find.txt  findip.sh  grep_sed.sh  kk.sh  ld_libary_path.txt  proxyip.sh  setenv.sh  tcpping.sh  tcpping.sh.bak
script/udata/: ch.py  udata_modify.py
src/: .Bars.cpp.20180323.cpp.swp  .Bars.cpp.20180323.swp  .Bars.cpp.swp  .Bars1.cpp.swp  .Base.cpp.swp  .Base.h.swp  .CtpGet.cpp.swp  .FuList.cpp.swp  .Index.cpp.swp  .Json.cpp.bak.swp  .Json.cpp.swo  .Json.cpp.swp  .Main.cpp.swp  .Makefile.swp  .MdCtp.cpp.swp  .MdSpi.cpp.swp  ApiClient.cpp  Bars.20180314.cpp  Bars.20180325.cpp  Bars.bak1.cpp  Bars.cpp  Bars.cpp.20180312  Bars.cpp.20180319  Bars.cpp.20180323  Bars.cpp.20180323.cpp  Bars.cpp.bak  Bars.cpp.bbb  Bars.cpp.xxx  Bars1.cpp  Bars20180324.cpp  Base.cpp  Base.cpp.static  Base.h  CMakeLists.txt  Data.cpp  DataHubs.cpp  DataHubs.cpp.bak  Dataserver.cpp  Dataserver.cpp.bak  Dataserver.err  (+45 more)
src/bak.20171229-001/: Base.cpp  main.cpp  uq_data_server.cpp  us.cpp  webdata.cpp
src/bak.20171229-002/: Base.cpp  Base.h  Roll.h  main.cpp  uBEE.h  uGG.h  uq_trade_server.cpp
src/bak.20171229-003/: Base.cpp  Base.h  ErrLog.cpp  ErrLog.h  m  main.cpp  strategy.h  uw.cpp
src/postgresql/: Pm  Pmain.cpp  Psqlconn.h
t/: .t1.cpp.swp  Index.cpp  Index.h  Main.cpp  Makefile  mnf.cpp  stc.cpp  t1.cpp
tbl/: .future.txt.swp  a.sh  b.sh  future.txt
testc++/: atomic.cpp  crash.cpp  fence.cpp  jthread.cpp  main.cpp  seg.cpp  seg2.cpp  seg3.cpp  seg4.cpp  thread.cpp  time.cpp  time2.cpp
testc++/derived/: Base.cpp  Base.h  Derived.cpp  Derived.cpp.bak  Derived.h  Main.cpp  Main01.cpp  a.sh  b.sh  my_program
third/: README.md
uquant/: CMakeLists.txt
uquant/base/: CMakeLists.txt  almost_equal.h  base.cpp  base.h  error_log.cpp  error_log.h  future_period.h  gb_x_utf8.cpp  gb_x_utf8.h  ini_loader.cpp  ini_loader.h  ini_reader.cpp  move_only_function.h  msg_protocol.cpp  msg_protocol.h  new_talib.h  see_talib.cpp  see_talib.h  spmc_queue.h  talib_define.h  timestamp.cpp  timestamp.h  trade_fun.h  types.h
uquant/bench/: m.sh  mult  mult.cpp  readm.md
uquant/ch_test/: CMakeLists.txt
uquant/cmake/: cJSON.cmake
uquant/ctp668/: CMakeLists.txt  config.ini  global.h  handle_mkdata_spi.h  handle_trader_spi.h  main.cpp  output.h  traderApi.cpp  traderApi.h  traderSpi.cpp  traderSpi.h
uquant/ctplib/ctp.bak/: ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
uquant/indicator/: boll.h  kd_macd.h  ma.h  rsi.h
uquant/src/: Bars.cpp  Bars.h  CMakeLists.txt  back_test_server.cpp  bb  bb.bak  broadcast.bak.2023-11-6  broadcast.cpp  ctp_make_mduser.cpp  ctp_make_mduser.h  ctp_make_trader.cpp  ctp_make_trader.h  ctp_mduser_spi.h  ctp_traderApi.cpp  ctp_traderApi.h  ctp_traderSpi.cpp  ctp_traderSpi.h  ctp_trader_spi.h  file.cpp  file.h  global.cpp  global.h  quant_server.cpp  queue_read.cpp  queue_read.h
uquant/src/clickhouse_client/: clickhouse_client.cpp  clickhouse_client.h
uquant/tests/: CMakeLists.txt  future_BoolAll_test.h  future_BoolSerial_test.h  future_BoolsegsList_test.h  future_PointsList_test.h  future_SectionsBase_test.h  future_StopsegsList_test.h  future_env.h  main.cpp  trader_macdkd.h  uquant_test01.cpp
uquant/tests/mock/: desc.text  fu2309_1F.text  fu2309_5F.text  future_env.cpp  k3k3.txt  main_trader_test.cpp11
uquant/tests/mock/tbl/: trader_macdkd.json
uquant/tests/mock/tdx_data/: SP2405_1F.txt  SP2405_5F.txt
uquant/tests/mock/trader_test/: CF2405_1F.txt  CF2405_5F.txt
uquant/tests/mock/trader_test/tbl/: CF2405_5F copy.txt  trade.json
uquant/tests/mock/trader_test/tdx_data/: CF2405_1F.txt  CF2405_5F.txt  OI2405_1F.txt
uquant/tools/: CMakeLists.txt  ctpping.cpp
uquant/trade/: CMakeLists.txt  main.cpp
uquant/trade/common/: main copy.cpp.20231119.static.ok  main.cpp.no.kd.bak.20231203
uquant/trade/run/tbl/: trade.json
uquant/uSockets/: Makefile
uquant/umath/: umath.h
website/back/: back.html
website/chart/: index.html  kd_2023_01_color_ok_02.html  kd_2023_01_k3_color_ok.html  kd_2023_01_k3_color_ok_1.html
(+35 files in other folders)
